refactor: 不要なprivate変数を削除